# a32emu

./: Cargo.toml  LICENSE.md  README.md
asm/: io.asm  isa.asm  mem.asm
doc/: ISA.md
src/: bitmaps.rs  cpu.rs  device.rs  main.rs
