[package]
name = "a32emu"
version = "0.3.1"
edition = "2021"
authors = [ "Mathis Rech" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align-data = "0.1"
ahash = "0.7"
lru = "0.7"
crossterm = "0.21"
gfx = "0.18"
gfx_device_gl = "0.16"
ggez = "0.6"
spin_sleep = "1.0"
getopts = "0.2"
